--- a/src/scss/font.sass
+++ b/src/scss/font.sass
@@ -1,5 +1,12 @@
-$class-slug: for !default
+$b: HelveticaNeueLTStd-BdCn
+$l: HelveticaNeueLTStd-Lt
 
-@for $i from 1 through 4
-  .#{$class-slug}-#{$i}
-    width: 60px + $i
+$font-list: $b $l
+
+=font-includ
+  @each $font-name in $font-list
+    @font-face
+      font-family: $font-name
+      src: url("../fonts/#{$font-name}/#{$font-name}.woff2") format("woff2"), url("../fonts/#{$font-name}/#{$font-name}.woff") format("woff"), url("../fonts/#{$font-name}/#{$font-name}.ttf") format("truetype"), url("../fonts/#{$font-name}/#{$font-name}.eot") format("eot"),
+
++font-includ
