--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -2,7 +2,7 @@
 // FONTS style
 // =========================================================== 
 
-  @import "@option__";
+//  @import "@option__";
 //  @import "font";
 
 // =========================================================== 
@@ -16,14 +16,14 @@
 // =========================================================== 
 
   .bar-long {
-    height: 4px;
+    height: 5px;
     width: 0;
     z-index: 1000;
     position: fixed;
     top: 0;
     left: 0;
-    background: #000;
-//    box-shadow: 0 0 15px rgba(255, 255, 255, 0.66); 
+    background: #9CC6DA;
+    box-shadow: 0 0 15px rgba(33, 32, 32, 0.66);
   }
 
 // =========================================================== 
@@ -31,7 +31,57 @@
 // =========================================================== 
 
 
+// ===========================================================
+// link
+// ===========================================================
 
+  a.link{
+    @media (min-width:701px){
+      display: none;
+    }
+
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    position: relative;
+    padding: 10px;
+     width: 61px;
+    margin: 17px 0 17px auto;
+    span{
+      display: flex;
+       justify-content: flex-end;
+      margin-left: auto;
+      width: 41px;
+      height: 5px;
+      background: #000;
+      margin-bottom: 7px;
+      transition: all .7s ease;
+
+      &:nth-child(2){
+         width: 35px;
+      }
+      &:last-child{
+        margin-bottom: 0;
+        width: 28px;
+      }
+    }
+
+    &:hover{
+      span{
+         background: #3d6c82;
+         margin-left: auto;
+         width: 41px;
+      }
+
+    }
+
+  }
+
+
+
+// ===========================================================
+// END link
+// ===========================================================
 
 html {
     scroll-behavior: smooth;
@@ -255,9 +305,7 @@ textarea:focus {
 
 
 [class*="section__"],
-section,
-footer,
-header{
+section{
     position: relative;
     padding: 80px 0;
     /* @media only screen and (min-width: 993px) {
@@ -273,23 +321,15 @@ header{
 
 
 
-
-
-
-
-
-
-
-
 // =========================================================== 
 // FORMAS 
 // =========================================================== 
 
 
     form {
-      max-width: 430px;
+      max-width: 100%;
       width: 100%;
-      margin: 0 auto;
+      margin: 0;
     }
 
     input {
@@ -336,7 +376,7 @@ header{
       padding: 16px 20px;
       margin-bottom: 35px;
       background: #ffffff;
-      border: 1px solid #000000;
+      border: 1px solid transparent;
       box-sizing: border-box;
 
       //       font: 14px $S !important;
@@ -507,14 +547,14 @@ header{
 
     input {
       border: none;
-      border: 1px solid rgba(0, 48, 91, 0.96);
+      border: 1px solid transparent;
       border-radius: 0px;
       display: block;
       width: 100%;
       height: 100%;
       max-height: 50px;
-      padding: 32.5px 20px;
-      background-color: #ededed;
+       padding: 11px 20px;
+      background-color: #fff;
       background-image: transparent;
       transition: border-color ease-in-out 0.15s,
         -webkit-box-shadow ease-in-out 0.15s;
