--- a/src/index.pug
+++ b/src/index.pug
@@ -2,12 +2,12 @@ doctype
 
 html
   head
-    title BETA Fobiya
+    title Sting Creative Marketing Website
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
-    meta(name='description', content='Demo')
-    meta(name='keywords', content='Demo')
+    meta(name='description', content='Sting Creative Marketing Website')
+    meta(name='keywords', content='Sting Creative Marketing Website')
     link(rel='icon', type='static/ico', href='favicon.ico')
 
     
@@ -37,6 +37,14 @@ html
               li
                 a.scroll(href="#contact") contact
                   
+    .left__menu
+      ul.menu
+        li
+          a.scroll(href="#about" target="_blank") about
+        li
+          a.scroll(href="#services") services
+        li
+          a.scroll(href="#contact") contact
 
     section.section__top
       .container
@@ -68,11 +76,11 @@ html
               div
                .block
                   span 02
-                  p Content & Copy Strategy
+                  p Content &amp; Copy Strategy
               div
                .block
                   span 03
-                  p Graphic & Web Design
+                  p Graphic &amp; Web Design
               div
                .block
                   span 04
@@ -93,12 +101,12 @@ html
             h2 Partner with Sting Creative Marketing
 
         .row
-          .col.m12.s12.l8.xl7
+          .col.m12.s12.l9.xl7
             ul.list
               li
                 img(src='img/strategy.png', alt='img1')
                 h5 Strategy
-                p Our team of experts are coming up with the best strategies! Expect instant solutions and targeted campaigns to boost your clicks, conversions & subscriptions.
+                p Our team of experts are coming up with the best strategies! Expect instant solutions and targeted campaigns to boost your clicks, conversions &amp; subscriptions.
               li
                 img(src='img/pencil.png', alt='img2')
                 h5 Content
@@ -153,23 +161,12 @@ html
               p Sting Creative Marketing Ltd is an official brand of
               ul
                 li
-                  a(href="#") Terms & Conditions
+                  a(href="#") Terms &amp; Conditions
                 li
                   a(href="#") Cookies Policy
                 li
                   a(href="#") Privacy Policy
               p &reg; 2020 StingCreativeMarketingLtd All Rights Reserved
-
-
-
-
-
-//script(src='//code.jquery.com/jquery-3.2.1.min.js')
-
-//script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/inputmask/inputmask.js')
-//script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/inputmask/jquery.inputmask.js')
-//
-//script(src='//cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js')
 
     
 
