--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,8 +6,9 @@
 @import "grid";
 @import "mixins";
 @import "modules/slick";
+@import "modules/ionicons";
 
-@import "modules/fancybox";
+//@import "modules/fancybox";
 // =========================================================== 
 // END Import
 // ===========================================================   
@@ -41,6 +42,10 @@
 
 
 .blue {
+  @media(max-width:600px){
+      max-width: 212px;
+      min-height: 50px;
+  }
   display: flex;
   justify-content: center;
   align-items: center;
@@ -80,46 +85,101 @@
 // =========================================================== 
 
 
+    @media (min-width: 992px) {
 
-/* title style */
+        @for $i from 1 through 6{
+          h1{
+            line-height: 1em;
+            font-size: 118px;
 
-  @for $i from 1 through 6{
-    h1{
-      line-height: 1em;
-      font-size: 118px;
-    
+
+          }
+          h#{$i}{
+
+              font:70px - ($i * 7) $b;
+              color: #000;
+
+              text-transform: capitalize;
+              letter-spacing: .1em;
+              margin-bottom: 43px - ($i * 3);
+
+            span{
+               font:80px - ($i * 10) $b;
+            }
+          }
+        }
 
     }
-    h#{$i}{
 
-        font:70px - ($i * 7) $b;
-        color: #000;
 
-        text-transform: capitalize;
-        letter-spacing: .1em;
-        margin-bottom: 43px - ($i * 3);
+    @media (max-width: 991px) and (min-width: 601px) {
+
+        @for $i from 1 through 6{
+          h1{
+          line-height: 1em;
+          font-size: 80px;
+          word-wrap: break-word;
+          width: 70%;
+
+          }
+          h#{$i}{
+
+              font:60px - ($i * 9) $b;
+              color: #000;
+
+              text-transform: capitalize;
+              letter-spacing: .1em;
+              margin-bottom: 43px - ($i * 3);
+
+            span{
+               font:80px - ($i * 10) $b;
+            }
+          }
+        }
+
+    }
+
+
+    @media (max-width: 600px){
+
+        @for $i from 1 through 6{
+          h1{
+          line-height: 1em;
+          font-size: 50px;
+          word-wrap: break-word;
+          width: 90%;
+
+          }
+          h#{$i}{
+
+              font:50px - ($i * 9) $b;
+              color: #000;
+
+              text-transform: capitalize;
+              letter-spacing: .1em;
+              margin-bottom: 43px - ($i * 3);
+
+            span{
+               font:80px - ($i * 10) $b;
+            }
+          }
+        }
+
+    }
+
+    p {
+      font: 18px $l;
+      color: #010101;
+      margin-bottom: 15px;
 
       span{
-         font:80px - ($i * 10) $b;
+        font: 18px $l;
       }
     }
-  }
 
-p {
-  font: 18px $l;
-  color: #010101;
-  margin-bottom: 15px;
-
-  span{
-    font: 18px $l;
-  }
-}
-
-a{
-  font: 18px $l;
-}
-
-/* title end style */
+    a{
+      font: 18px $l;
+    }
 
 // =========================================================== 
 // END Title style
@@ -137,9 +197,98 @@ div.slick-slider.slick-initialized {
     display: block;
 }
 
+.slick-arrow{
+  position: absolute;
+  top:50%;
+  transform: translate(0, -50%);
+  font-size: 25px;
+  z-index: 3;
+}
+
+.slick-slider .ion-chevron-right{
+  right: 0;
+}
+
+.slick-slider .ion-chevron-left{
+  left: 0;
+}
+
 // =========================================================== 
 // END SLICK STYLE
 // =========================================================== 
+
+
+// ===========================================================
+// MENU
+// ===========================================================
+
+.menu_{
+
+  height: 100vh;
+  margin-left: 270px;
+  overflow: hidden;
+  position: fixed;
+  section,header,footer{
+      filter: brightness(.7);
+  }
+}
+
+body{
+      transition: all .4s ease-out;
+  width: 100%;
+}
+
+
+
+.left__menu {
+    @media (min-width:701px){
+      display: none;
+    }
+    display: block;
+    position: relative;
+    height: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+
+    transform: translateX(-100%);
+    z-index: 1001;
+    width: 270px;
+    max-width: 100%;
+
+
+    -webkit-overflow-scrolling: touch;
+    transition: transform 3.3s ease-in-out;
+    -ms-scroll-chaining: none;
+
+    ul{
+      width: 100%;
+      height: 100vh;
+      background: #eee;
+
+      li{
+        padding: 10px 0;
+        border-bottom: 1px solid #cecece;
+        text-align: center;
+
+        &:last-child{
+          padding-bottom: 10px !important;
+        }
+        a{
+          font: 18px $l;
+          color: #000;
+          font-weight: 900;
+          text-transform: uppercase;
+        }
+      }
+    }
+}
+
+
+
+// ===========================================================
+// END MENU
+// ===========================================================
 
 
 // =========================================================== 
@@ -150,12 +299,13 @@ div.slick-slider.slick-initialized {
 
       $header-height: 80px;
 
-      width: 100%;
-      height: $header-height;
+//      width: 100%;
+//      height: $header-height;
 
-      position: absolute;
-      top:0;
-      z-index: 1;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    width: 100%;
 
       &.scroll{
         background: rgba(241, 241, 241, 0.9);
@@ -215,27 +365,22 @@ div.slick-slider.slick-initialized {
 // SECTION style
 // =========================================================== 
 
-
-
-
-
-    .section__top{
-
-      @media(min-width:992px){
+    .section__top {
+      @media (min-width: 992px) {
         background: #f1f1f1 url(../img/top-background.png) no-repeat top center;
         background-size: cover;
         padding: 0;
 
-        & .row>div{
+        & .row > div {
           text-align: center;
         }
-        h1{
+        h1 {
           text-align: center;
         }
       }
 
-      @media(max-width:991px){
-          background: #f1f1f1 url(../img/bg-img-mob.png) no-repeat top center;
+      @media (max-width: 991px) {
+        background: #f1f1f1 url(../img/bg-img-mob.png) no-repeat top center;
         background-size: cover;
       }
 
@@ -248,164 +393,269 @@ div.slick-slider.slick-initialized {
       align-items: center;
       flex-direction: column;
 
-
-
-      h1{
-
+      h1 {
         display: inline-block;
         position: relative;
 
-        &:after{
-          content: "Elevate your presence";
-          display: block;
-          font-size: 20px;
-          color: #000;
-          position: absolute;
-          right: 18px;
-          bottom: -40px;
-          line-height: 1;
-          letter-spacing: .1em;
+        @media (min-width: 992px) {
+          &:after {
+            content: "Elevate your presence";
+            display: block;
+            font-size: 20px;
+            color: #000;
+            position: absolute;
+            right: 18px;
+            bottom: -40px;
+            line-height: 1;
+            letter-spacing: 0.1em;
+          }
+        }
+
+        @media (max-width: 991px) and (min-width: 601px) {
+          &:after {
+            content: "Elevate your presence";
+            display: block;
+            font-size: 30px;
+            color: #000;
+            position: relative;
+            right: 0px;
+            bottom: -20px;
+            line-height: 1;
+            letter-spacing: 0.1em;
+          }
+        }
+
+        @media (max-width: 600px) {
+          &:after {
+            content: "Elevate your presence";
+            display: block;
+            font-size: 30px;
+            color: #000;
+            position: relative;
+            right: 0px;
+            bottom: -20px;
+            line-height: 1;
+            letter-spacing: 0.1em;
           }
         }
       }
+    }
 
-    @media(min-width:992px){
-      .section__1{
-        padding-top:150px;
+    @media (min-width: 992px) {
+      .section__1 {
+        padding-top: 150px;
         padding-bottom: 0;
-        .container>.row:nth-child(1) p{
-          line-height: 2.2em
+        .container > .row:nth-child(1) p {
+          line-height: 2.2em;
         }
-        .container>.row:nth-child(1){
+        .container > .row:nth-child(1) {
           margin-bottom: 100px;
         }
       }
     }
 
 
-    @media(min-width:992px){
-      .section__2{
 
-        .block__slider{
-          margin-left: -40px;
+    .section__2 {
+          @media (min-width: 992px) {
+
+        h2 {
+          margin-bottom: 80px;
         }
+
+        .block__slider {
+          margin-left: -40px;
+
       }
     }
 
-    .section__2{
       background-color: #fff;
 
-      h2{
-        margin-bottom: 80px;
-      }
+      .block {
 
-      .block{
-        max-width: 245px;
-        width: 100%;
-        height: 344px;
-        border: 2px solid #C3C9CC;
-        padding: 80px 40px 0;
-        margin: 50px auto;
+        @media (min-width: 601px) {
+          max-width: 245px;
+          width: 100%;
+          height: 344px;
 
-        transition: all .7s ease;
+          padding: 80px 40px 0;
+          margin: 50px auto;
 
-        span{
+        }
+
+        @media (max-width: 600px) {
+             max-width: 180px;
+
+             height: 224px;
+           padding: 30px 20px 0;
+          margin: 20px auto;
+        }
+
+
+
+        transition: all 0.7s ease;
+        border: 2px solid #c3c9cc;
+
+        span {
+           @media (max-width: 600px) {
+              font: 40px $l;
+          }
           color: #d4d4d4;
           font: 60px $l;
           margin-bottom: 40px;
-            transition: all .7s ease;
+          transition: all 0.7s ease;
         }
 
-        p{
+        p {
+           @media (max-width: 600px) {
+                 font-size: 18px;
+          }
           font-size: 25px;
           font-weight: 900;
           line-height: 1.5em;
         }
-        &:hover{
+        &:hover {
           position: relative;
           border: 4px solid #9cc6da;
           transform: scale(1.2);
 
-          span{
-            color: #888888
+          span {
+            color: #888888;
           }
         }
       }
     }
 
-    @media(min-width:992px){
-      .section__3{
 
-          .bulbs{
-            position: absolute;
-            right: 0;
-            top:20%;
-          }
+    .section__3 {
+
+   @media (min-width: 1200px) {
+
+        .bulbs {
+          position: absolute;
+          right: 0;
+          top: 20%;
+        }
+
+    }
+      @media (max-width: 1199px) and (min-width: 993px) {
+
+        overflow-x: hidden;
+
+        .bulbs {
+          position: absolute;
+           right: -17%;
+          top: 20%;
+          z-index: -1;
+
+        }
+
+    }
+
+
+    @media (max-width: 992px) and (min-width: 601px) {
+      .bulbs {
+         display: none;
       }
     }
-    .section__3{
-      h2{
+
+
+@media (max-width: 600px) {
+
+        overflow-x: hidden;
+
+        .bulbs {
+          position: relative;
+          right: -5%;
+          top: 0;
+          z-index: -1;
+          float: right;
+
+        }
+
+    }
+
+      h2 {
         max-width: 650px;
         width: 100%;
         margin-bottom: 50px;
       }
 
-      .list{
+      .list {
         display: flex;
         flex-wrap: wrap;
-        li{
-          max-width: 33%;
-          padding-right: 40px;
-          margin-bottom: 85px;
+        li {
+          @media (min-width: 601px) {
+            max-width: 33%;
+            padding-right: 40px;
+            margin-bottom: 85px;
 
-          h5{
-            font-size: 23px;
+            h5 {
+              font-size: 23px;
+            }
+
+            p {
+              font-size: 17px;
+            }
+          }
+          @media (max-width: 600px) {
+            max-width: 50%;
+            padding-right: 15px;
+            margin-bottom: 50px;
+
+            h5 {
+              font-size: 20px;
+            }
+
+            p {
+              font-size: 14px;
+            }
           }
 
-          p{
-            font-size: 17px;
-          }
-
-          img{
+          img {
             margin-bottom: 30px;
             max-height: 80px;
             width: auto;
-
           }
         }
       }
-
     }
 
 
-    @media(min-width:992px){
-      .section__4{
-        padding-top: 0;
-        .block{
-          padding:  100px 50px 100px 0 ;
-        }
+
+    .section__4 {
+      @media (min-width: 992px) {
+          padding-top: 0;
+          .block {
+            padding: 100px 50px 100px 0;
+          }
       }
-    }
-
-    .section__4{
-      .block{
+      @media (max-width: 991px) {
+          background: #f6f6f6;
+        margin-bottom: 80px
+      }
+      .block {
         position: relative;
         background: #f6f6f6;
-        .block__form{
-          margin-top: 50px
+        .block__form {
+          margin-top: 50px;
         }
-        .block__form,h3,p{
+        .block__form,
+        h3,
+        p {
           position: relative;
-            z-index: 1;
+          z-index: 1;
         }
         form {
-          .blue{
+          .blue {
+            @media (max-width:991px){
+                margin-top: 0px;
+            }
             margin-top: 30px;
           }
-
         }
 
-        &:before{
+        &:before {
           content: "";
           display: block;
           width: 70vw;
@@ -417,10 +667,9 @@ div.slick-slider.slick-initialized {
           position: absolute;
           z-index: 0;
         }
-
       }
-
     }
+
 
 
 // =========================================================== 
@@ -438,6 +687,9 @@ div.slick-slider.slick-initialized {
       border-top: 1px solid #050b10;
 
         p{
+          @media (max-width:600px){
+              font: 14px $l;
+          }
           font: 17px $l;
           color: #000;
           text-align: center;
@@ -446,6 +698,10 @@ div.slick-slider.slick-initialized {
           margin-bottom: 0;
         }
       ul{
+
+        @media (max-width:500px){
+              flex-direction: column;
+        }
         display: flex;
         justify-content: center;
         margin: 13px 0;
@@ -456,26 +712,36 @@ div.slick-slider.slick-initialized {
             margin: 0 15px;
           position: relative;
 
-            &:before{
-              content: "";
-              display: block;
-              width: 1px;
-              height: 15px;
-              margin: 3px 0;
-              position: absolute;
-              left: -13px;
-              top: 0;
-              background: #000;
+                  @media (max-width:500px){
+             margin: 5px 15px;
+                    text-align: center;
+        }
+
+            @media (min-width:501px){
+              &:before{
+                content: "";
+                display: block;
+                width: 1px;
+                height: 15px;
+                margin: 3px 0;
+                position: absolute;
+                left: -13px;
+                top: 0;
+                background: #000;
+              }
             }
 
           a{
+            @media (max-width:600px){
+              font: 14px $l;
+            }
             font: 17px $l;
             font-weight: 900;
              color: #000;
             text-decoration: underline;
             &:hover{
                color: #3d6c82;
-    text-shadow: 0 0 25px rgba(255, 255, 255, 0.5);
+               text-shadow: 0 0 25px rgba(255, 255, 255, 0.5);
             }
           }
         }
@@ -499,7 +765,7 @@ div.slick-slider.slick-initialized {
     @media only screen and (min-width: 1201px) { 
 
         /* header,  */
-        footer,
+
         [class*='section__']{
             padding: 100px 0;
         }
