--- a/src/index.pug
+++ b/src/index.pug
@@ -2,13 +2,23 @@ doctype
 
 html
   head
-    title Sting Creative Marketing Website
+    title Demo Fobiya
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
-    meta(name='description', content='Sting Creative Marketing Website')
-    meta(name='keywords', content='Sting Creative Marketing Website')
-    link(rel='icon', type='static/ico', href='favicon.ico')
+
+    link(rel='icon', type='static/ico', href='img/favicon.svg?v=13')
+
+    meta(property='og:image', content='http://')
+    meta(property='og:image:width', content='500')
+    meta(property='og:image:height', content='500')
+    meta(property='og:title', content='Demo Fobiya')
+    meta(property='og:url', content='http://')
+    meta(property='og:site_name', content='Demo Fobiya')
+    meta(property='og:description', content='Demo Fobiya')
+    meta(property='og:type', content='Website')
+    meta(name='description', content='Demo Fobiya')
+    meta(name='keywords', content='Demo Fobiya')
 
     
   body <!--(data-img="img/1.png")-->
@@ -21,7 +31,7 @@ html
         .row
           .col.m3.s3.l3.xl3
             .box__logo
-              img.logo(src='#', alt='Logo')
+              img.logo(src='img/logo-black.svg', alt='Logo')
 
 
           .col.m9.s9.l9.xl9
@@ -50,21 +60,21 @@ html
       .container
         .row
           .col.m12.s12.l12.xl12
-            h1 Sting Creative Marketing
+            h1 Lorem ipsum dolor sit.
             
     section.section__1#about
        .container
         .row
-          .col.m12.s12.l12.xl7
-            h2 What It’s all about?
           .col.m12.s12.l12.xl5
-            p Your presence cannot be validated without the right collaboration with the industry specialists. Still looking for your marketing solutions? Let us guide your brand, achieving the recognition you deserve! Our team consists of reputable industry professionals, up-to-date with market trends and trained to effectively provide you with the appropriate services for all your marketing needs!
+            h2 Lorem ipsum dolor sit.
+          .col.m12.s12.l12.xl5.offset-xl2
+            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
 
     section.section__2#services
        .container
         .row
           .col.m12.s12.l12.xl12
-            h2 Boost Your Strategy With Our Services
+            h2 Lorem ipsum dolor sit.
 
         .row
           .col.m12.s12.l12.xl12
@@ -72,23 +82,23 @@ html
               div
                .block
                   span 01
-                  p Integrated Marketing Strategy
+                  p Lorem ipsum dolor.
               div
                .block
                   span 02
-                  p Content &amp; Copy Strategy
+                  p Lorem ipsum dolor.
               div
                .block
                   span 03
-                  p Graphic &amp; Web Design
+                  p Lorem ipsum dolor.
               div
                .block
                   span 04
-                  p Web Development
+                  p Lorem ipsum dolor.
               div
                .block
                   span 05
-                  p Email Marketing Services
+                  p Lorem ipsum dolor.
               
     section.section__3
        .container
@@ -98,7 +108,7 @@ html
             source(srcset='img/bulbs-mob.png', media='(max-width: 600px)')
             img.bulbs(srcset='img/bulbs.png', alt='bulbs')
           .col.m12.s12.l12.xl12
-            h2 Partner with Sting Creative Marketing
+            h2 Lorem ipsum dolor sit.
 
         .row
           .col.m12.s12.l9.xl7
@@ -106,19 +116,19 @@ html
               li
                 img(src='img/strategy.png', alt='img1')
                 h5 Strategy
-                p Our team of experts are coming up with the best strategies! Expect instant solutions and targeted campaigns to boost your clicks, conversions &amp; subscriptions.
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
               li
                 img(src='img/pencil.png', alt='img2')
                 h5 Content
-                p Your company’s message is important, and communicating it correctly is even more important! We provide you with enriched content that will send the appropriate messages to your audience.
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
               li
                 img(src='img/design.png', alt='img3')
                 h5 Design
-                p We provide you with top-notch designs,  to attract your target audience. Let us elevate your visual identity with innovative tactics and designs according to the needs of your demographic.
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
               li
                 img(src='img/web.png', alt='img4')
                 h5 Web
-                p Upgrade your website with the innovative services of our development team. We aim for responsive and performant user-experience, allowing you to meet your users’ needs.
+                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
               li
                 img(src='img/email.png', alt='img5')
                 h5 Emails
@@ -133,8 +143,8 @@ html
         .row
           .col.m12.s12.l8.xl7
             .block
-              h3  Contact US
-              p Partner with top professionals, to elevate your marketing to the highest level!! If you need any assistance, feel free to get in touch with us!
+              h3 Lorem ipsum dolor sit.
+              p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
               .block__form
                 form(method='POST', action='javascript:void(null);')
                   // Hidden Required Fields
@@ -157,16 +167,9 @@ html
       .container
         .row
           .col.m12.s12.l12.xl12
-            .block
-              p Sting Creative Marketing Ltd is an official brand of
-              ul
-                li
-                  a(href="#") Terms &amp; Conditions
-                li
-                  a(href="#") Cookies Policy
-                li
-                  a(href="#") Privacy Policy
-              p &reg; 2020 StingCreativeMarketingLtd All Rights Reserved
+              p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+
+              p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 
     
 
