--- a/src/index.pug
+++ b/src/index.pug
@@ -1,6 +1,6 @@
 doctype
 
-html
+html(lang='en')
   head
     title Demo Fobiya
     meta(charset='UTF-8')
@@ -168,7 +168,13 @@ html
         .row
           .col.m12.s12.l12.xl12
               p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-
+              ul
+                li
+                  a(href="#") Terms &amp; Conditions
+                li
+                  a(href="#") Cookies Policy
+                li
+                  a(href="#") Privacy Policy
               p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 
     
