--- a/src/scss/font.sass
+++ b/src/scss/font.sass
@@ -1,6 +1,6 @@
-$b: HelveticaNeueLTStd-BdCn
-$l: HelveticaNeueLTStd-Lt
-$i: HelveticaNeueLTStd-It
+$b: NotoSans-black
+$l: NotoSans-Light
+$i: NotoSans-Italic
 $icon: ionicons
 
 $font-list: $b $l $i
