--- a/src/index.pug
+++ b/src/index.pug
@@ -2,23 +2,24 @@ doctype
 
 html(lang='en')
   head
-    title Demo Fobiya
+    title Sting Creative Marketing Website
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
 
     link(rel='icon', type='static/ico', href='img/favicon.svg?v=13')
 
-    meta(property='og:image', content='http://')
-    meta(property='og:image:width', content='500')
-    meta(property='og:image:height', content='500')
-    meta(property='og:title', content='Demo Fobiya')
-    meta(property='og:url', content='http://')
-    meta(property='og:site_name', content='Demo Fobiya')
-    meta(property='og:description', content='Demo Fobiya')
-    meta(property='og:type', content='Website')
-    meta(name='description', content='Demo Fobiya')
-    meta(name='keywords', content='Demo Fobiya')
+    meta(property='og:url', content='http://stingcreativemarketing.com/')
+    meta(property='og:image', content='http://stingcreativemarketing.com/img/ogg.png?v=1.2')
+    meta(property='og:image:width', content='300')
+    meta(property='og:image:height', content='300')
+
+    meta(property='og:title', content='Sting Creative Marketing Website')
+    meta(property='og:site_name', content='Sting Creative Marketing Website')
+    meta(property='og:description', content='Sting Creative Marketing Website')
+    meta(property='og:type', content='Sting Creative Marketing Website')
+    meta(name='description', content='Sting Creative Marketing Website')
+    meta(name='keywords', content='Sting Creative Marketing Website')
 
     
   body <!--(data-img="img/1.png")-->
@@ -60,21 +61,21 @@ html(lang='en')
       .container
         .row
           .col.m12.s12.l12.xl12
-            h1 Lorem ipsum dolor sit.
+            h1 Sting Creative Marketing
             
     section.section__1#about
        .container
         .row
-          .col.m12.s12.l12.xl5
-            h2 Lorem ipsum dolor sit.
-          .col.m12.s12.l12.xl5.offset-xl2
-            p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
+          .col.m12.s12.l12.xl6
+            h2 What is  Sting Creative Marketing all about?
+          .col.m12.s12.l12.xl5.offset-xl1
+            p Your presence cannot be validated without the right collaboration with the industry specialists. Still looking for your marketing solutions? Let us guide your brand, achieving the recognition you deserve! Our team consists of reputable industry professionals, up-to-date with market trends and trained to effectively provide you with the appropriate services for all your marketing needs!
 
     section.section__2#services
        .container
         .row
           .col.m12.s12.l12.xl12
-            h2 Lorem ipsum dolor sit.
+            h2 Boost Your Strategy With Our Services
 
         .row
           .col.m12.s12.l12.xl12
@@ -82,23 +83,23 @@ html(lang='en')
               div
                .block
                   span 01
-                  p Lorem ipsum dolor.
+                  p Integrated Marketing Strategy
               div
                .block
                   span 02
-                  p Lorem ipsum dolor.
+                  p Content &amp; Copy Strategy
               div
                .block
                   span 03
-                  p Lorem ipsum dolor.
+                  p Graphic &amp; Web Design
               div
                .block
                   span 04
-                  p Lorem ipsum dolor.
+                  p Web Development
               div
                .block
                   span 05
-                  p Lorem ipsum dolor.
+                  p Email Marketing Services
               
     section.section__3
        .container
@@ -108,7 +109,7 @@ html(lang='en')
             source(srcset='img/bulbs-mob.png', media='(max-width: 600px)')
             img.bulbs(srcset='img/bulbs.png', alt='bulbs')
           .col.m12.s12.l12.xl12
-            h2 Lorem ipsum dolor sit.
+            h2 Partner with Sting Creative Marketing
 
         .row
           .col.m12.s12.l9.xl7
@@ -116,19 +117,19 @@ html(lang='en')
               li
                 img(src='img/strategy.png', alt='img1')
                 h5 Strategy
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
+                p Our team of experts are coming up with the best strategies! Expect instant solutions and targeted campaigns to boost your clicks, conversions &amp; subscriptions.
               li
                 img(src='img/pencil.png', alt='img2')
                 h5 Content
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
+                p Your company’s message is important, and communicating it correctly is even more important! We provide you with enriched content that will send the appropriate messages to your audience.
               li
                 img(src='img/design.png', alt='img3')
                 h5 Design
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
+                p We provide you with top-notch designs,  to attract your target audience. Let us elevate your visual identity with innovative tactics and designs according to the needs of your demographic.
               li
                 img(src='img/web.png', alt='img4')
                 h5 Web
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
+                p Upgrade your website with the innovative services of our development team. We aim for responsive and performant user-experience, allowing you to meet your users’ needs.
               li
                 img(src='img/email.png', alt='img5')
                 h5 Emails
@@ -143,14 +144,14 @@ html(lang='en')
         .row
           .col.m12.s12.l8.xl7
             .block
-              h3 Lorem ipsum dolor sit.
-              p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque nostrum molestias dolorem eum, eveniet veritatis blanditiis tempore soluta natus alias!
+              h3 Contact US
+              p Partner with top professionals, to elevate your marketing to the highest level!! If you need any assistance, feel free to get in touch with us!
               .block__form
                 form(method='POST', action='javascript:void(null);')
                   // Hidden Required Fields
                   .form_input
                     span.field
-                      input.ferstname(type='text', name='ferstname', required='', value='', placeholder='Name')
+                      input.name(type='text', name='name', required='', value='', placeholder='Name')
                   .form_input
                     span.field
                       input.mail(type='email', name='email', required='', value='', placeholder='Email')
@@ -162,20 +163,16 @@ html(lang='en')
                       textarea.textarea(name='message', required='', value='', placeholder='Message')
 
                   button.blue(type='submit', name='send') SEND
-  
+
     footer
       .container
         .row
           .col.m12.s12.l12.xl12
-              p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              ul
-                li
-                  a(href="#") Terms &amp; Conditions
-                li
-                  a(href="#") Cookies Policy
-                li
-                  a(href="#") Privacy Policy
-              p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            p &reg; 2020 StingCreativeMarketingLtd All Rights Reserved
+
+
+
+
 
     
 
