--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "mixins";
 @import "modules/slick";
 @import "modules/ionicons";
+@import "modules/fancybox";
 
 //@import "modules/fancybox";
 // =========================================================== 
@@ -43,7 +44,7 @@
 
 .blue {
   @media(max-width:600px){
-      max-width: 212px;
+      max-width: 210px;
       min-height: 50px;
   }
   display: flex;
@@ -54,7 +55,7 @@
   background-color: #9CC6DA;
   
   width: 100%;
-  max-width: 300px;
+  max-width: 260px;
   height: auto;
   min-height: 65px;
 
@@ -100,7 +101,7 @@
               color: #000;
 
               text-transform: capitalize;
-              letter-spacing: .1em;
+              letter-spacing: .01em;
               margin-bottom: 43px - ($i * 3);
 
             span{
@@ -118,8 +119,8 @@
           h1{
           line-height: 1em;
           font-size: 80px;
-          word-wrap: break-word;
-          width: 70%;
+//          word-wrap: break-word;
+//          width: 70%;
 
           }
           h#{$i}{
@@ -128,7 +129,7 @@
               color: #000;
 
               text-transform: capitalize;
-              letter-spacing: .1em;
+              letter-spacing: .01em;
               margin-bottom: 43px - ($i * 3);
 
             span{
@@ -143,20 +144,14 @@
     @media (max-width: 600px){
 
         @for $i from 1 through 6{
-          h1{
-          line-height: 1em;
-          font-size: 50px;
-          word-wrap: break-word;
-          width: 90%;
 
-          }
           h#{$i}{
 
-              font:50px - ($i * 9) $b;
+              font:50px - ($i * 10) $b;
               color: #000;
 
               text-transform: capitalize;
-              letter-spacing: .1em;
+
               margin-bottom: 43px - ($i * 3);
 
             span{
@@ -166,6 +161,8 @@
         }
 
     }
+
+
 
     p {
       font: 18px $l;
@@ -297,12 +294,62 @@ body{
 
     header{
 
+      transition:  all .7s ease;
+      background-color: transparent;
+
+
+            @media (min-width:601px){
+        &.back{
+           background-color: #fff;
+           box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+              z-index: 5;
+            transition:  all .3s ease;
+           .box__logo{
+
+
+
+          }
+
+          .menu{
+
+          }
+
+          a.link{
+
+          }
+        }
+
+        }
+
+      @media (max-width:600px){
+        &.back{
+           background-color: #fff;
+           box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+              z-index: 5;
+            transition:  all .3s ease;
+           .box__logo{
+                height: 61px;
+
+
+          }
+
+          .menu{
+               height: 61px;
+          }
+
+          a.link{
+                margin: 7px 0 7px auto;
+          }
+        }
+
+        }
+
       $header-height: 80px;
 
 //      width: 100%;
 //      height: $header-height;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 1;
     width: 100%;
@@ -379,6 +426,15 @@ body{
         }
       }
 
+      @media (max-width: 991px) and (min-width: 601px) {
+        justify-content: flex-start;
+        padding-top: 35%;
+      }
+      @media (max-width: 600px){
+        justify-content: flex-start;
+        padding-top: 30%;
+      }
+
       @media (max-width: 991px) {
         background: #f1f1f1 url(../img/bg-img-mob.png) no-repeat top center;
         background-size: cover;
@@ -393,9 +449,30 @@ body{
       align-items: center;
       flex-direction: column;
 
+
+
+
       h1 {
         display: inline-block;
         position: relative;
+
+        @media (max-width: 1760px) and (min-width: 993px) {
+
+          &:after {
+            content: "Elevate your presence";
+            display: block;
+            font-size: 20px;
+            color: #000;
+            position: absolute;
+            right: 18px;
+            bottom: -40px;
+            line-height: 1;
+            width: 100%;
+            text-align: center;
+
+          }
+
+        }
 
         @media (min-width: 992px) {
           &:after {
@@ -407,11 +484,14 @@ body{
             right: 18px;
             bottom: -40px;
             line-height: 1;
-            letter-spacing: 0.1em;
+
           }
         }
 
-        @media (max-width: 991px) and (min-width: 601px) {
+        @media (max-width: 991px) and (min-width: 501px) {
+           font-size: 80px;
+
+              line-height: 1em;
           &:after {
             content: "Elevate your presence";
             display: block;
@@ -421,21 +501,22 @@ body{
             right: 0px;
             bottom: -20px;
             line-height: 1;
-            letter-spacing: 0.1em;
+
           }
         }
 
-        @media (max-width: 600px) {
+        @media (max-width: 500px) {
+          font-size: 48px;
+
           &:after {
             content: "Elevate your presence";
             display: block;
-            font-size: 30px;
+            font-size: 20px;
             color: #000;
             position: relative;
             right: 0px;
             bottom: -20px;
             line-height: 1;
-            letter-spacing: 0.1em;
           }
         }
       }
@@ -449,7 +530,7 @@ body{
           line-height: 2.2em;
         }
         .container > .row:nth-child(1) {
-          margin-bottom: 100px;
+          margin-bottom: 50px;
         }
       }
     }
@@ -457,6 +538,11 @@ body{
 
 
     .section__2 {
+
+      @media (min-width:1201px){
+
+        padding-bottom: 60px;
+      }
           @media (min-width: 992px) {
 
         h2 {
@@ -478,7 +564,7 @@ body{
           width: 100%;
           height: 344px;
 
-          padding: 80px 40px 0;
+          padding: 60px 40px 0;
           margin: 50px auto;
 
         }
@@ -501,7 +587,7 @@ body{
               font: 40px $l;
           }
           color: #d4d4d4;
-          font: 60px $l;
+          font: 50px $l;
           margin-bottom: 40px;
           transition: all 0.7s ease;
         }
@@ -510,7 +596,7 @@ body{
            @media (max-width: 600px) {
                  font-size: 18px;
           }
-          font-size: 25px;
+          font-size: 23px;
           font-weight: 900;
           line-height: 1.5em;
         }
@@ -585,30 +671,60 @@ body{
         display: flex;
         flex-wrap: wrap;
         li {
-          @media (min-width: 601px) {
-            max-width: 33%;
-            padding-right: 40px;
-            margin-bottom: 85px;
+          @media (min-width: 992px) {
+               max-width: 250px;
+              margin-bottom: 85px;
+              margin-right: 50px;
 
             h5 {
               font-size: 23px;
             }
 
             p {
-              font-size: 17px;
+              font-size: 16px;
             }
           }
-          @media (max-width: 600px) {
-            max-width: 50%;
-            padding-right: 15px;
-            margin-bottom: 50px;
+          @media (max-width: 991px) and  (min-width: 701px) {
+                max-width: 33%;
+              margin-bottom: 55px;
+            padding-right: 35px;
 
-            h5 {
-              font-size: 20px;
+
+            &:nth-child(3), &:nth-child(6){
+                   padding-right: 0px;
+            }
+
+           h5 {
+              font-size: 22px;
             }
 
             p {
-              font-size: 14px;
+              font-size: 15px;
+            }
+          }
+
+         @media (max-width: 700px) {
+            max-width: 50%;
+           margin-bottom: 30px;
+
+
+              &:nth-child(2n){
+                   padding-right: 0px;
+                padding-left: 10px;
+            }
+
+                         &:nth-child(2n+1){
+                   padding-right: 10px;
+
+            }
+
+            h5 {
+              font-size: 20px;
+              margin-bottom: 20px;
+            }
+
+            p {
+              font-size: 13px;
             }
           }
 
@@ -616,6 +732,12 @@ body{
             margin-bottom: 30px;
             max-height: 80px;
             width: auto;
+
+             @media (max-width: 700px) {
+                       max-height: 65px;
+                margin-bottom: 20px;
+
+            }
           }
         }
       }
