--- a/src/index.pug
+++ b/src/index.pug
@@ -164,6 +164,7 @@ html(lang='en')
 
                   button.blue(type='submit', name='send') SEND
 
+    script(src='https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js')
     footer
       .container
         .row
